--- a/analyze_chats.ipynb
+++ b/analyze_chats.ipynb
@@ -565,6 +565,60 @@
    "source": [
     "plot_countplot(df_origin, '시각에 따른 메세지 전송 수', 'hour')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "시발 sender\n",
+      "B    419\n",
+      "A    363\n",
+      "Name: message, dtype: int64\n",
+      "ㅅㅂ sender\n",
+      "B    811\n",
+      "A    409\n",
+      "Name: message, dtype: int64\n",
+      "개새끼 sender\n",
+      "B    26\n",
+      "A    25\n",
+      "Name: message, dtype: int64\n",
+      "ㅂㅅ sender\n",
+      "A    39\n",
+      "B    24\n",
+      "Name: message, dtype: int64\n",
+      "병신 sender\n",
+      "A    274\n",
+      "B    186\n",
+      "Name: message, dtype: int64\n",
+      "좆 sender\n",
+      "B    376\n",
+      "A     47\n",
+      "Name: message, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "d=df_origin\n",
+    "ls=['시발','ㅅㅂ','개새끼','ㅂㅅ','병신','좆']\n",
+    "for l in ls :\n",
+    "    n=d[(d[\"message\"].str.contains(l)) ].groupby(\"sender\")[\"message\"].count().sort_values(ascending=False)\n",
+    "    print(l+' ',end='')\n",
+    "    print(n)\n",
+    "\n",
+    "del d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
